--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,16 +11,19 @@ services:
       - CONNECTION_TIMEOUT=300000
       - MAX_QUEUE_LENGTH=20
       - PREBOOT_CHROME=true
-      - ENABLE_DEBUGGER=true # Cambiado a true para habilitar el depurador
+      - ENABLE_DEBUGGER=true # Necesario para habilitar el depurador
+      - ENABLE_DEBUG_VIEWER=true # Habilitar el visor de depuración
       - WORKSPACE_DELETE_EXPIRED=true
       - WORKSPACE_EXPIRE_DAYS=7
       - ENABLE_CORS=true
-      - DEBUG=browserless*,puppeteer:* # Añadido para habilitar logs de depuración detallados
-      - FUNCTION_ENABLE_INCOGNITO_MODE=true # Opcional: permite sesiones de incógnito
-      - TOKEN=S0G1V9NnysIfNo6b4594f2f03360c5cb9faececf54 # Puedes añadir un token para seguridad si lo deseas
-    # Browserless ya incluye su propio SYS_ADMIN y configuración para Chrome
-    shm_size: 2gb # Memoria compartida para Chrome
-    mem_limit: 4g # Límite de memoria
+      - DEBUG=browserless*,puppeteer:* # Logs de depuración detallados
+      - FUNCTION_ENABLE_INCOGNITO_MODE=true
+      - TOKEN=S0G1V9NnysIfNo6b4594f2f03360c5cb9faececf54
+      - CHROME_REFRESH_TIME=10000 # Actualiza el estado del navegador cada 10s
+      - KEEP_ALIVE=true # Mantiene las sesiones activas
+      - DEFAULT_LAUNCH_ARGS=["--window-size=1920,1080", "--disable-features=IsolateOrigins", "--disable-site-isolation-trials"]
+    shm_size: 2gb
+    mem_limit: 4g
 
   # Servicio de scraper
   scraper:
