--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: browserless/chrome:latest
     restart: unless-stopped
     ports:
-      - "3001:3000"
+      - "3002:3000"
     environment:
       # Configuración de Browserless
       - MAX_CONCURRENT_SESSIONS=10
@@ -21,7 +21,7 @@ services:
       - TOKEN=S0G1V9NnysIfNo6b4594f2f03360c5cb9faececf54
       - CHROME_REFRESH_TIME=10000 # Actualiza el estado del navegador cada 10s
       - KEEP_ALIVE=true # Mantiene las sesiones activas
-      - DEFAULT_LAUNCH_ARGS=["--window-size=1920,1080", "--disable-features=IsolateOrigins", "--disable-site-isolation-trials"]
+      - DEFAULT_LAUNCH_ARGS=["--window-size=1920,1080", "--disable-features=IsolateOrigins", "--disable-site-isolation-trials", "--disable-web-security", "--allow-running-insecure-content"]
     shm_size: 2gb
     mem_limit: 4g
 
@@ -29,11 +29,13 @@ services:
   scraper:
     build: .
     ports:
-      - "4001:4000" # Expone la API en el puerto 3001
+      - "3001:3000" # Expone la API en el puerto 3001
     environment:
-      - PORT=4000 # Puerto interno donde escucha tu aplicación
+      - PORT=3000 # Puerto interno donde escucha tu aplicación
       # URL de Browserless para conectarse (nombre del servicio + puerto interno)
       - BROWSERLESS_URL=ws://chrome:3000?token=S0G1V9NnysIfNo6b4594f2f03360c5cb9faececf54
+      # Habilitar uso de proxies
+      - USE_PROXIES=true
     restart: unless-stopped
     # Esto permite a ambos contenedores encontrarse en la misma red
     depends_on:
